--- a/style.css
+++ b/style.css
@@ -190,6 +190,9 @@ nav ul li a:hover::after{
     border-radius: 50%;
     text-align: center;
 }
+.layer .p{
+    margin-top: 5px;
+}
 .work:hover img{
     transform: scale(1.1);
 }
